# ai_recruite

./: README.md
backend/: .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b605bb46aaca_create_initial_tables_for_jobs_and_.py  bf0eb048b58a_add_required_skills_to_jobs_table.py  c42108240e0e_add_required_skills_to_jobs_table.py  dc92dda28c7e_add_default_value_for_application_date_.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: candidate.py  jobs.py
backend/core/: config.py  database.py
backend/models/: schemas.py  tables.py
backend/scripts/: seed.py
backend/services/: candidates.py  jobs.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/jobs/: route.ts
frontend/app/api/jobs/[jobId]/: route.ts
frontend/app/api/jobs/[jobId]/candidates/: route.ts
frontend/app/jobs/: columns.tsx  data-table.tsx  jobs-table-filters.tsx
frontend/app/jobs/[jobId]/: apply-dialog.tsx  job-detail-view.tsx  page.tsx
frontend/app/jobs/[jobId]/candidates/: columns.tsx  data-table.tsx  page.tsx
frontend/app/jobs/create/: create-job-form.tsx  page.tsx
frontend/components/layout/: header.tsx  page-layout.tsx
frontend/components/tables/: data-table.tsx
frontend/components/ui/: progress.tsx
frontend/lib/: types.ts
frontend/providers/: query-provider.tsx
