[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "fastapi-cli>=0.0.7",
    "fastapi[standard]>=0.115.14",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.41",
]
